--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Blank Template",
+    "name": "Nutrients Calculator",
     "slug": "nutrients-calculator",
     "privacy": "public",
     "sdkVersion": "36.0.0",
